k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-exam
  template:
    metadata:
      labels:
        app: auth-exam
    spec:
      containers:
        - name: auth-exam
          image:
          resources:
            requests:
              memory: "90Mi"
              cpu: "90m"
            limits:
              memory: "80Mi"
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-exam
  ports:
    - port: 3000
      targetPort: 3000
