k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-exam
  template:
    metadata:
      labels:
        app: notification-exam
    spec:
      containers:
        - name: notification-exam
          image: alessiorizz/notification
          resources:
            requests:
              memory: "90Mi"
              cpu: "90m"
            limits:
              memory: "90Mi"
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-exam
  ports:
    - port: 80
      targetPort: 80
