k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-exam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-exam
  template:
    metadata:
      labels:
        app: user-exam
    spec:
      containers:
        - name: user-exam
          image: reigstryesamecloud.azurecr.io/user
          resources:
            requests:
              memory: "90Mi"
              cpu: "5m"
            limits:
              memory: "90Mi"
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-exam
  ports:
    - port: 80
      targetPort: 3000
